--- a/.github/workflows/metrics.yaml
+++ b/.github/workflows/metrics.yaml
@@ -36,7 +36,7 @@ jobs:
           plugin_languages_analysis_timeout_repositories: 7.5
           plugin_languages_categories: markup, programming
           plugin_languages_colors: github
-          plugin_languages_ignored: html, css, javascript, c#, shaderlab
+          plugin_languages_ignored: html, css, javascript, c#, shaderlab, PHP
           plugin_languages_limit: 20
           plugin_languages_recent_categories: markup, programming
           plugin_languages_recent_days: 14
