--- a/.github/workflows/metrics.yaml
+++ b/.github/workflows/metrics.yaml
@@ -42,7 +42,7 @@ jobs:
           plugin_languages_recent_days: 14
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
-          plugin_languages_skipped: bert-named-entity-recognition, teacher-qualifying-exam-sign-up-system, utf8-converter, nctu-gameweek
+          plugin_languages_skipped: bert-named-entity-recognition, teacher-qualifying-exam-sign-up-system, utf8-converter, nctu-gameweek, flutter_libtdjson, esc_pos_printer
           plugin_languages_threshold: 0%
           plugin_lines: yes
           plugin_lines_history_limit: 100
